# cpppc

./: .clang-format  .gitignore  .ycm_extra.conf.py  Front Page.page  Notes.page  StudentProjects.page  ToDo.page  Uniworx-Description.txt  WS1617_Formular_NM_CppCP.txt
Projects/: AFE.page  GLV.page  NLP.page  WebSockets.page
assignment-01/: assignment-01.page
assignment-02/: assignment-02.page  assignment-02.tex
assignment-03/: assignment-02.page  assignment-03.page  assignment-03.tex
assignment-04/: assignment-04.page
assignment-05/: assignment-05.page
assignment-06/: assignment-06.page
assignment-06/a-06/: array_expr.h  functional_expr.h  index_sequence.h
assignment-06/s-06/: CMakeLists.txt  README.md  array_expr.h  functional_expr.h  index_sequence.h
assignment-06/s-06/solution/: array_expr.h  functional_expr.h  index_sequence.h  quicksort.h
assignment-06/s-06/test/: quicksort_test.cpp  quicksort_test.h
assignment-midterm/: assignment-midterm.page
midterm/: midterm_assignment.md
session-01/: session-01-orga.page  session-01.page
session-02/: session-02-funcall.page  session-02.page
session-03/: session-03.page
session-04/: session-04.page
session-04/02-iterators/: main.cc
session-05/: session-05.page
session-06/: session-06.page
session-07/: session-07.page
session-08/: session-08.page
session-09/: session-09.page
session-10/: session-10.page
session-11/: session-11.page
session-12/: session-12.page
session-wats/: session-wats.page
setup/: .syntastic_c  .syntastic_cpp  dpkg.installed.txt  init-home.sh  reset-home.sh
(+90 files in other folders)
